Bug 96451 - UI isn't properly refreshed when inserting formula
Summary: UI isn't properly refreshed when inserting formula
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha1
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.2 target:5.1.6
Keywords: bibisected, bisected, regression
: 97658 97867 98090 98549 99173 99688 99846 99893 100142 100168 100170 100776 100790 100867 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-12 23:50 UTC by sawakaze
Modified: 2016-10-11 21:57 UTC (History)
23 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen shot open formula from calc (76.63 KB, image/png)
2015-12-12 23:54 UTC, sawakaze
Details
Formula screenshot with UI issues when inserting inside of calc (51.13 KB, image/png)
2016-07-29 11:24 UTC, Anurag Ranjan
Details
The corrupted Impress UI when inserting math with open sidebars (94.45 KB, image/jpeg)
2016-09-20 21:49 UTC, Andy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2015-12-12 23:50:09 UTC
Hi,

After following Steps, Calc Layout was broken. (The detail is Attachment)
(1) Open Calc
(2) Insert > Object > Formula...
--> the left side memu is mixed calc bar and formula menu.

A user cannot select formula drop down menu for selecting block.

confirmed version.
Version: 5.2.0.0.alpha0+
Build ID: 37d735b27477cc1b72063b0ef307a437fa5233a1
CPU Threads: 4; OS Version: Linux 3.16; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-12-12_01:44:12
Locale: ja-JP (ja_JP.UTF-8)

Env..
OS : Linux Debian
Desktop : MATE

Info: following version does not cause this bug. 

Version: 5.0.0.5
Build ID: 437e4abdf9e72fd0a6e6f8697a0e659bc77f9b10
Locale: ja-JP (ja_JP.UTF-8)

Therefore, it may be regression.

Regards,
Sawakaze
Comment 1 sawakaze 2015-12-12 23:54:03 UTC
Created attachment 121251 [details]
Screen shot open formula from calc
Comment 2 m_a_riosv 2015-12-13 01:48:22 UTC
Reproducible, Win10x64
Version: 5.1.0.0.alpha1 (x64) Build ID: 0b48731919433e46e4fda7e5a5ca27c08c28b981-GL

Not reproducible.
Version: 5.0.4.1 (x64) Build ID: 2def61bcbb29a7a8611b833682fe1291910b11ad
Comment 3 raal 2015-12-14 13:06:48 UTC
This seems to have begun at the below commit.
Adding Cc: to Markus Mohrhard; Could you possibly take a look at this one? Thanks
 e8bb41bc7feeb93ae3c11b3c03deac9ab717ac3b is the first bad commit
commit e8bb41bc7feeb93ae3c11b3c03deac9ab717ac3b
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Jul 29 20:24:17 2015 -0700

    source faed29cac93f8176bb937e6a8b437d6450b7a884

    source faed29cac93f8176bb937e6a8b437d6450b7a884
	
author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2015-07-14 13:07:29 (GMT)
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2015-07-16 06:15:17 (GMT)
commit faed29cac93f8176bb937e6a8b437d6450b7a884 (patch)
Comment 4 raal 2016-02-10 13:28:57 UTC
*** Bug 97658 has been marked as a duplicate of this bug. ***
Comment 5 Maxim Monastirsky 2016-03-09 12:49:39 UTC
*** Bug 98090 has been marked as a duplicate of this bug. ***
Comment 6 Maxim Monastirsky 2016-03-09 12:52:22 UTC
*** Bug 98549 has been marked as a duplicate of this bug. ***
Comment 7 Bryan Wright 2016-03-23 15:00:14 UTC
This bug also appears in LibreOffice 5.1.1.3 (build id 1:5.1.1-0ubuntu1) under Ubuntu 16.04.  Is there a workaround?
Comment 8 shannon 2016-03-23 18:22:14 UTC
(In reply to Bryan Wright from comment #7)
> This bug also appears in LibreOffice 5.1.1.3 (build id 1:5.1.1-0ubuntu1)
> under Ubuntu 16.04.  Is there a workaround?

Bug occurs in 64-bit Windows and Mac versions of 5.1.1.3 as well.

Workaround is to close the Slide side pane before editing or creating a new formula. Slide Pane can be turned back on in the View menu if desired, after you've finished with your formula.
Comment 9 Buovjaga 2016-03-23 18:28:34 UTC
*** Bug 97867 has been marked as a duplicate of this bug. ***
Comment 10 Maxim Monastirsky 2016-04-09 20:44:23 UTC
*** Bug 99173 has been marked as a duplicate of this bug. ***
Comment 11 V Stuart Foote 2016-05-05 01:33:34 UTC
*** Bug 99688 has been marked as a duplicate of this bug. ***
Comment 12 Maxim Monastirsky 2016-05-14 22:36:55 UTC
*** Bug 99846 has been marked as a duplicate of this bug. ***
Comment 13 Maxim Monastirsky 2016-05-16 19:17:15 UTC
*** Bug 99893 has been marked as a duplicate of this bug. ***
Comment 14 V Stuart Foote 2016-05-30 19:27:07 UTC
*** Bug 100142 has been marked as a duplicate of this bug. ***
Comment 15 V Stuart Foote 2016-06-01 04:48:13 UTC
*** Bug 100168 has been marked as a duplicate of this bug. ***
Comment 16 Maxim Monastirsky 2016-06-02 15:09:49 UTC
*** Bug 100170 has been marked as a duplicate of this bug. ***
Comment 17 V Stuart Foote 2016-07-05 19:05:08 UTC
*** Bug 100776 has been marked as a duplicate of this bug. ***
Comment 18 mail 2016-07-06 05:43:09 UTC
LO 5.1.4 still has the same problem.
Comment 19 V Stuart Foote 2016-07-07 14:54:15 UTC
*** Bug 100790 has been marked as a duplicate of this bug. ***
Comment 20 V Stuart Foote 2016-07-12 14:22:19 UTC
*** Bug 100867 has been marked as a duplicate of this bug. ***
Comment 21 Anurag Ranjan 2016-07-29 11:19:47 UTC
This bug still exists in Libreoffice 5.1.4.2 - in debian 8. And it only happens when insert formula from inside of calc, with others its ok.
Comment 22 Anurag Ranjan 2016-07-29 11:24:26 UTC
Created attachment 126464 [details]
Formula screenshot with UI issues when inserting inside of calc

Screenshot for libreoffice 5.1.4.2, debian 8, 64 bit version.
Comment 23 V Stuart Foote 2016-07-29 12:41:04 UTC
Sorry, this has not been corrected in any fashion and is still present on current builds of 5.3.0alpha0+ master.

But thank you for not filing a new bug, but any eventual progress on the issue will be reflected here in BZ in the Whiteboard field and with specific commit comments.

For any checking, simple STR in Calc (issue is still present in other modules affecting the Sidebar when visible):

1. open Calc
2. select a cell
3. menu Insert -> Object -> Formula
4. note the GUI components of the Formula Editor are blended with Calc frame elements, the ghosted Calc elements block use of some elements of the Formula Editor
5. enter a formula in the edit window, e.g. "E=m cdot c^2"
6. select another cell
7. note OLE of the formula renders as expected positioned linked to the prior cell
8. note the Formula Editor elements are removed and only functional Calc elements remain

The issue remains that the OLE launch of the Formula Editor is not fully gaining control of the frame and document canvas--the calling module is "bleeding" through in some elements.
Comment 24 john 2016-07-29 13:56:18 UTC
There is also something weird that happens when editing a formula in Writer when the sidebar is open and docked on the right (assuming the formula sidebar also is docked on the right. Ubuntu 5.1.4.2. I will try to get a screenshot if you need?
Comment 25 V Stuart Foote 2016-07-29 14:03:52 UTC
(In reply to john from comment #24)
> There is also something weird that happens when editing a formula in Writer
> when the sidebar is open and docked on the right (assuming the formula
> sidebar also is docked on the right. Ubuntu 5.1.4.2. I will try to get a
> screenshot if you need?

No need, that also is known facet of this issue, please see the Duplicates above but "view as a bug list".
Comment 26 Commit Notification 2016-08-15 20:26:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5977a89c28b285dfface71ca71e07bb0463ed19

Resolves: tdf#96451 do magic to enable embedded chart sidebar only for chart

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 Commit Notification 2016-08-16 11:51:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=804c46020f03d06331928e43b9ba1e694b0d473c&h=libreoffice-5-2

Resolves: tdf#96451 do magic to enable embedded chart sidebar only for chart

It will be available in 5.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2016-09-08 14:01:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c51f207747150933c6725fa22af1682cf066d8c&h=libreoffice-5-1

Resolves: tdf#96451 do magic to enable embedded chart sidebar only for chart

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Andy 2016-09-20 21:45:49 UTC
Unfortunately, I realized today that in LO 5.2.1 the interface problems with equation editor are present in Impress too, and are quite severe.

If you are working with one or two open sidebar, inserting a math equation results is a general and unpredictable screen corruption, which makes editing the equation very difficult if not impossible.

As a workaround, you can close all sidebars, then the screen corruption will not be there (almost, there a re a few pixels out of place in this case too, but the thing is manageable).

Of course this is very annoying of you have to do some speedy work on a presentation.
I am uploading a screenshot of the terrible situation
Comment 30 Andy 2016-09-20 21:48:18 UTC
OF course I do not know if the patch that was devised for Calc and will be in 5.2.2 will also eliminate the problem in Impress.
If this has not been done, it's advisable to do so.
Comment 31 Andy 2016-09-20 21:49:31 UTC
Created attachment 127488 [details]
The corrupted Impress UI when inserting math with open sidebars
Comment 32 V Stuart Foote 2016-09-20 22:08:38 UTC
It is not patched in 5.2.1 builds. 

As noted in the white board, it is correct in master (5.3.0) and just verified it has been patched in 5.2.2.1 rc1 and applies to Impress module when inserting a formula. 

Closing Resolved Fixed.