Resolves: tdf#96451 do magic to enable embedded chart sidebar only for chart

objects, and do the normal thing for other objects, e.g. math

Change-Id: Ifb786a841b843b0317713769cb214a44dceaf546
(cherry picked from commit c5977a89c28b285dfface71ca71e07bb0463ed19)
Reviewed-on: https://gerrit.libreoffice.org/28153
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 3c51f207747150933c6725fa22af1682cf066d8c)